# python-sanicargs

./: .gitignore  .prospector.yaml  .travis.yml  CHANGELOG.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox.yaml
examples/: simple.py
sanicargs/: __init__.py  fields.py
tests/: test_sanicargs.py  test_sanicargs_post.py
