[tool.poetry]
name = "sanicargs"
version = "2.0.4"
description = "Parses query args in sanic using type annotations"
readme = "README.md"
keywords = ["sanicargs", "sanic", "query", "args", "type annotations"]
authors = [
    "Johannes Valbjørn <jgv@trustpilot.com>",
    "Thomas Thiebaud <tht@trustpilot.com>"
]
repository = "https://github.com/trustpilot/python-sanicargs"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
sanic = ">=18.12"
ciso8601 = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-sanic = "^1.6.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
